<resources>
    <string name="app_name">Light Tracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Sseparateur">Visual separator</string>
    <string name="Bgo">Go tracking !</string>
    <string name="Tsite">Website address</string>
    <string name="EsiteHint">www.example.com</string>
    <string name="Ttoken">Tracker\'s token</string>
    <string name="EtokenHint">0123456789abcdef</string>
    <string name="title_activity_recuperation">Recuperation</string>
    <string name="title_activity_track">Track</string>
    <string name="recuperation">Database dump</string>
    <string name="Ttracker">Tracker ID</string>
    <string name="EtrackerHint">12</string>
    <string name="Stracking">Tracking</string>
    <string name="Spaused">Not tracking</string>
    <string name="title_activity_reglages">Reglages</string>
    <string name="TadressePOST">Address to POST data :</string>
    <string name="Bvalider">Save changes</string>
    <string name="Bdump">Dump</string>
    <string name="CBtous">Dump sent data too ?</string>
    <string name="TrienAAfficher">There is nothing to dump</string>
    <string name="AMODIFIER">\" \"</string>
    <string name="D_fichier">Save in .txt file</string>
    <string name="D_POST">Send data to server</string>
    <string name="D_MARQUER">Mark all as sent</string>
    <string name="DTIdump">Data dumping</string>
    <string name="DTXdump">Please choose where and how to dump data :</string>
    <string name="imprevus">Troubleshooting</string>
    <string name="title_activity_trouble_shooting">TroubleShooting</string>
    <string name="RAZimprevus">Reset markers</string>
</resources>
